# Dashboard-ZPE---Em-Constru-o

.devcontainer/: devcontainer.json
zpe-dashboard-main/: .gitignore  pyproject.toml  requirements.txt
zpe-dashboard-main/resources/: analyse_dfs.py
zpe-dashboard-main/src/: app.py  comexstat.py  comtrade.py  dataverse.py  main.py  show.py
