[project]
name = "zpe-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtradeapicall>=1.2.1",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pydataverse>=0.3.5",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]
